# tensor-llm-model-builder

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
src/job/: main.py
src/job/helpers/: __init__.py  builder.py  cmd.py  env.py  save.py
